--- a/angular/mysqlCRUD/package.json
+++ b/angular/mysqlCRUD/package.json
@@ -13,6 +13,7 @@
     "express": "^4.14.0",
     "express-myconnection": "^1.0.4",
     "jade": "^1.11.0",
-    "mysql": "^2.11.1"
+    "mysql": "^2.11.1",
+    "path": "^0.12.7"
   }
 }
